@@ -6,7 +6,7 @@ use lib 't';
 use TestLib;
 use Socket;
 
-use Test::More tests => 43;
+use Test::More tests => 59;
 
 # create fake socket at 5433 to verify that this port is skipped
 socket (SOCK, PF_INET, SOCK_STREAM, getprotobyname('tcp')) or die "socket: $!";
@@ -22,6 +22,16 @@ like_program_out 'postgres', 'pg_lsclusters -h', 0, qr/.*5432.*5433.*5435.*/s,
 my $old = "$MAJORS[0]/old";
 my $new1 = "$MAJORS[-1]/new1";
 my $new2 = "$MAJORS[-1]/new2";
+
+# move user_clusters aside for the test; this will ensure that client programs
+# work correctly without any file at all
+if (-f '/etc/postgresql-common/user_clusters') {
+    ok ((rename '/etc/postgresql-common/user_clusters',
+    '/etc/postgresql-common/user_clusters.psqltestsuite'),
+    'Temporarily moving away /etc/postgresql-common/user_clusters');
+} else {
+    pass '/etc/postgresql-common/user_clusters does not exist';
+}
 
 # check basic cluster selection
 like_program_out 0, 'psql --version', 0, qr/^psql \(PostgreSQL\) $MAJORS[0]\.\d+\b/, 
@@ -72,6 +82,56 @@ like_program_out 'postgres', 'psql --version', 0, qr/^psql \(PostgreSQL\) $MAJOR
     'PGPORT+PGCLUSTER, PGCLUSTER selects version';
 is_program_out 'postgres', 'psql -Atc "show port" template1', 0, "5432\n", 
     'PGPORT+PGCLUSTER, PGPORT selects port';
+delete $ENV{'PGPORT'};
+delete $ENV{'PGCLUSTER'};
+
+# check cluster selection with an empty user_clusters
+open F, '>/etc/postgresql-common/user_clusters' or die "Could not create user_clusters: $!";
+close F;
+chmod 0644, '/etc/postgresql-common/user_clusters';
+like_program_out 0, 'psql --version', 0, qr/^psql \(PostgreSQL\) $MAJORS[0]\.\d+\b/, 
+    'pg_wrapper selects port 5432 as default cluster with empty user_clusters';
+like_program_out 0, "psql --cluster $new1 --version", 0, 
+    qr/^psql \(PostgreSQL\) $MAJORS[-1]\.\d+\b/, 
+    'pg_wrapper --cluster works with empty user_clusters';
+
+# check default cluster selection with user_clusters
+open F, '>/etc/postgresql-common/user_clusters' or die "Could not create user_clusters: $!";
+print F "* * 8.1 new1 *\n";
+close F;
+chmod 0644, '/etc/postgresql-common/user_clusters';
+like_program_out 'postgres', 'psql --version', 0, qr/^psql \(PostgreSQL\) $MAJORS[-1]\.\d+\b/, 
+    "pg_wrapper selects correct cluster with user_clusters '* * $MAJORS[-1] new1 *'";
+
+# check by-user cluster selection with user_clusters
+# (also check invalid cluster reporting)
+open F, '>/etc/postgresql-common/user_clusters' or die "Could not create user_clusters: $!";
+print F "postgres * $MAJORS[-1] new1 *\nnobody * $MAJORS[0] old *\n* * 5.5 * *";
+close F;
+chmod 0644, '/etc/postgresql-common/user_clusters';
+like_program_out 'postgres', 'psql --version', 0, qr/^psql \(PostgreSQL\) $MAJORS[-1]\.\d+\b/, 
+    'pg_wrapper selects correct cluster with per-user user_clusters';
+like_program_out 'nobody', 'psql --version', 0, qr/^psql \(PostgreSQL\) $MAJORS[0]\.\d+\b/, 
+    'pg_wrapper selects correct cluster with per-user user_clusters';
+like_program_out 0, 'psql --version', 1, qr/user_clusters.*line 3.*cluster.*not exist/i, 
+    'pg_wrapper selects correct cluster with per-user user_clusters';
+
+# check invalid user_clusters
+open F, '>/etc/postgresql-common/user_clusters' or die "Could not create user_clusters: $!";
+print F 'foo';
+close F;
+chmod 0644, '/etc/postgresql-common/user_clusters';
+like_program_out 'postgres', 'psql --version', 0, qr/ignoring invalid line 1/, 
+    'pg_wrapper ignores invalid lines in user_clusters';
+
+# restore original user_clusters
+if (-f '/etc/postgresql-common/user_clusters.psqltestsuite') {
+    ok ((rename '/etc/postgresql-common/user_clusters.psqltestsuite',
+    '/etc/postgresql-common/user_clusters'),
+    'Restoring original /etc/postgresql-common/user_clusters');
+} else {
+    pass '/etc/postgresql-common/user_clusters did not exist, not restoring';
+}
 
 # clean up
 is ((system "pg_dropcluster $MAJORS[-1] new1 --stop-server"), 0, "dropping $new1");
