@@ -25,8 +25,9 @@ postgresql-common (44) unstable; urgency=low
   * debian/postgresql-common.postinst: Only restart servers if upgrading from
     a version with important pg_ctlcluster changes in between (currently,
     prior than 40).
+  * t/090_multicluster.t: Add test for user_clusters behaviour.
 
- -- Martin Pitt <mpitt@debian.org>  Fri, 10 Mar 2006 17:37:45 +0100
+ -- Martin Pitt <mpitt@debian.org>  Fri, 10 Mar 2006 18:58:54 +0100
 
 postgresql-common (43) unstable; urgency=low
 
